--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,7 +27,7 @@ body {
   background: $background;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-size: cover;
 }
 
 ul,
@@ -857,6 +857,10 @@ a {
 /*?--------------------------------------------------------------?*/
 
 @media (min-width: 1200px) {
+  body {
+    background-attachment: fixed;
+  }
+
   #topBtn:hover {
     background-color: $clr-dark;
   }
